Closed Bug 1822062 Opened 3 years ago Closed 3 years ago

All content processes receive an IPC whenever the new tab page is updated

Categories

(Toolkit :: Places, defect)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: florian, Assigned: florian)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

See this profile of Firefox being idle for multiple hours: https://share.firefox.dev/425QUGf

Whenever the new tab page is updated, the privileged content process sends an PContent::Msg_StartVisitedQueries IPC to the parent, that then sends PContent::Msg_NotifyVisited messages to all content processes (including preallocated content processes and the webextension process).

Is this the expected behavior? Was bug 1714614 meant to avoid this?

Flags: needinfo?(emilio)

What URI(s) are we sending in NotifyVisited? Whenever we visit a new URI we need to broadcast that to all processes.

Flags: needinfo?(emilio)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

What URI(s) are we sending in NotifyVisited?

Most of the time, none.

Assignee: nobody → florian
Status: NEW → ASSIGNED

(In reply to Florian Quèze [:florian] from comment #2)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

What URI(s) are we sending in NotifyVisited?

Most of the time, none.

Example profile (without the fix, but with extra debug markers) showing this: https://share.firefox.dev/3ZRjt8N

Profile with the fix and the same debug markers: https://share.firefox.dev/3ZSWrOU We no longer wake-up the preallocated content processes when updating the cached new tab page in the privileged content process.

Pushed by fqueze@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7dce2a070dda avoid sending NotifyVisited IPCs with no URIs, r=emilio.
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: