Bug 1822062 - avoid sending NotifyVisited IPCs with no URIs, r=emilio.

Differential Revision: https://phabricator.services.mozilla.com/D172688